Fix checkstyle
Signed-off-by: Andrew Carbonetto <andrewc@bitquilltech.com>